--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 
     <link rel="stylesheet" href="css/variables.css">
     <link rel="stylesheet" href="css/style.css?v=3">
+
+    <!-- PostHog Analytics -->
+    <script>
+        !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.async = !0, p.src = s.api_host + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys getNextSurveyStep onSessionId".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
+        posthog.init('phc_7EZHmBCGTKA2i60owBepTfAPT2IhaHhlXTMFXlNcnCY', {
+            api_host: 'https://us.i.posthog.com',
+            loaded: function (posthog) {
+                posthog.register({
+                    'environment': (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') ? 'local' : 'production'
+                });
+            }
+        })
+    </script>
 </head>
 
 <body>
@@ -42,20 +55,6 @@
             </div>
         </section>
 
-        <!-- Instagram Reels Section (Moved up) -->
-        <section class="instagram-section">
-            <div class="section-container">
-                <div class="articles-header">
-                    <h2 class="section-title">Latest Reels</h2>
-                    <a href="https://www.instagram.com/aswinonfinance/" target="_blank" class="view-all-link">Follow on
-                        Instagram →</a>
-                </div>
-
-                <div class="reels-grid" id="reelsGrid">
-                    <!-- Reels loaded from the script below -->
-                </div>
-            </div>
-        </section>
 
         <!-- NRI Mutual Funds Section -->
         <section class="nri-mf-section">
@@ -181,6 +180,21 @@
                         <p class="calculator-description">Calculate your monthly car loan EMI</p>
                         <span class="calculator-cta">Calculate →</span>
                     </a>
+                </div>
+            </div>
+        </section>
+
+        <!-- Instagram Reels Section (Moved down) -->
+        <section class="instagram-section">
+            <div class="section-container">
+                <div class="articles-header">
+                    <h2 class="section-title">Latest Reels</h2>
+                    <a href="https://www.instagram.com/aswinonfinance/" target="_blank" class="view-all-link">Follow on
+                        Instagram →</a>
+                </div>
+
+                <div class="reels-grid" id="reelsGrid">
+                    <!-- Reels loaded from the script below -->
                 </div>
             </div>
         </section>
