--- a/mutualfunds/onboarding.html
+++ b/mutualfunds/onboarding.html
@@ -408,8 +408,16 @@
                     </ul>
                 </div>
 
-                <div class="step-actions centered">
-                    <a href="index.html" class="btn-primary">Back to Home</a>
+                <div class="cal-section" style="margin-top: 2.5rem; text-align: center;">
+                    <h3 style="font-size: 1.25rem; font-weight: 500; margin-bottom: 1rem;">Want to skip the wait?</h3>
+                    <p style="color: var(--color-text-secondary); margin-bottom: 1.5rem;">Schedule a 15-min intro call
+                        with Aswin directly.</p>
+
+                    <div id="my-cal-inline" style="width: 100%; height: 100%; overflow: scroll;"></div>
+                </div>
+
+                <div class="step-actions centered" style="margin-top: 2rem;">
+                    <a href="index.html" class="btn-secondary">Back to Home</a>
                 </div>
             </div>
         </section>
@@ -690,6 +698,18 @@
                 }
             });
         }
+    </script>
+    <script type="text/javascript">
+        (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; typeof namespace === "string" ? (cal.ns[namespace] = api) && p(api, ar) : p(cal, ar); return; } p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
+        Cal("init", { origin: "https://cal.com" });
+
+        Cal("inline", {
+            elementOrSelector: "#my-cal-inline",
+            calLink: "aswinonfinance/15min",
+            layout: "month_view"
+        });
+
+        Cal("ui", { "styles": { "branding": { "brandColor": "#000000" } }, "hideEventTypeDetails": false, "layout": "month_view" });
     </script>
 </body>
 
