--- a/mutualfunds/onboarding.html
+++ b/mutualfunds/onboarding.html
@@ -7,24 +7,9 @@
     <title>Start Onboarding | Aswin on Finance</title>
     <meta name="description" content="Begin your mutual fund investment journey as an NRI or OCI.">
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600&display=swap" rel="stylesheet">
+    <link rel="preload" href="/fonts/Outfit-Variable.woff2" as="font" type="font/woff2" crossorigin>
 
     <link rel="stylesheet" href="onboarding.css">
-
-    <!-- PostHog Analytics -->
-    <script>
-        !function (t, e) { var o, n, p, r; e.__SV || (window.posthog = e, e._i = [], e.init = function (i, s, a) { function g(t, e) { var o = e.split("."); 2 == o.length && (t = t[o[0]], e = o[1]), t[e] = function () { t.push([e].concat(Array.prototype.slice.call(arguments, 0))) } } (p = t.createElement("script")).type = "text/javascript", p.async = !0, p.src = s.api_host + "/static/array.js", (r = t.getElementsByTagName("script")[0]).parentNode.insertBefore(p, r); var u = e; for (void 0 !== a ? u = e[a] = [] : a = "posthog", u.people = u.people || [], u.toString = function (t) { var e = "posthog"; return "posthog" !== a && (e += "." + a), t || (e += " (stub)"), e }, u.people.toString = function () { return u.toString(1) + ".people (stub)" }, o = "capture identify alias people.set people.set_once set_config register register_once unregister opt_out_capturing has_opted_out_capturing opt_in_capturing reset isFeatureEnabled onFeatureFlags getFeatureFlag getFeatureFlagPayload reloadFeatureFlags group updateEarlyAccessFeatureEnrollment getEarlyAccessFeatures getActiveMatchingSurveys getSurveys getNextSurveyStep onSessionId".split(" "), n = 0; n < o.length; n++)g(u, o[n]); e._i.push([i, s, a]) }, e.__SV = 1) }(document, window.posthog || []);
-        posthog.init('phc_7EZHmBCGTKA2i60owBepTfAPT2IhaHhlXTMFXlNcnCY', {
-            api_host: 'https://us.i.posthog.com',
-            loaded: function (posthog) {
-                posthog.register({
-                    'environment': (window.location.hostname === 'localhost' || window.location.hostname === '127.0.0.1') ? 'local' : 'production'
-                });
-            }
-        })
-    </script>
 </head>
 
 <body>
@@ -711,6 +696,9 @@
 
         Cal("ui", { "styles": { "branding": { "brandColor": "#000000" } }, "hideEventTypeDetails": false, "layout": "month_view" });
     </script>
+
+    <!-- Analytics (deferred — not render-blocking) -->
+    <script src="/js/analytics.js" defer></script>
 </body>
 
 </html>
