--- a/mutualfunds/index.html
+++ b/mutualfunds/index.html
@@ -11,7 +11,7 @@
     <link rel="preload" href="/fonts/Outfit-Variable.woff2" as="font" type="font/woff2" crossorigin>
 
     <link rel="stylesheet" href="../css/variables.css">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css?v=5">
 </head>
 
 <body>
