--- a/mutualfunds/onboarding.html
+++ b/mutualfunds/onboarding.html
@@ -398,7 +398,22 @@
                     <p style="color: var(--color-text-secondary); margin-bottom: 1.5rem;">Schedule a 15-min intro call
                         with Aswin directly.</p>
 
-                    <div id="my-cal-inline" style="width: 100%; height: 100%; overflow: scroll;"></div>
+                    <!-- Cal inline embed code begins -->
+                    <div style="width:100%;height:100%;overflow:scroll"
+                        id="my-cal-inline-1-1-call-with-aswin-investing-from-abroad"></div>
+                    <script type="text/javascript">
+                        (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; let d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; if (typeof namespace === "string") { cal.ns[namespace] = cal.ns[namespace] || api; p(cal.ns[namespace], ar); p(cal, ["initNamespace", namespace]); } else p(cal, ar); return; } p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
+                        Cal("init", "1-1-call-with-aswin-investing-from-abroad", { origin: "https://app.cal.com" });
+
+                        Cal.ns["1-1-call-with-aswin-investing-from-abroad"]("inline", {
+                            elementOrSelector: "#my-cal-inline-1-1-call-with-aswin-investing-from-abroad",
+                            config: { "layout": "month_view", "useSlotsViewOnSmallScreen": "true", "month": "2026-02" },
+                            calLink: "vinayak-nair-vbtd74/1-1-call-with-aswin-investing-from-abroad",
+                        });
+
+                        Cal.ns["1-1-call-with-aswin-investing-from-abroad"]("ui", { "hideEventTypeDetails": false, "layout": "month_view" });
+                    </script>
+                    <!-- Cal inline embed code ends -->
                 </div>
 
                 <div class="step-actions centered" style="margin-top: 2rem;">
@@ -684,19 +699,6 @@
             });
         }
     </script>
-    <script type="text/javascript">
-        (function (C, A, L) { let p = function (a, ar) { a.q.push(ar); }; d = C.document; C.Cal = C.Cal || function () { let cal = C.Cal; let ar = arguments; if (!cal.loaded) { cal.ns = {}; cal.q = cal.q || []; d.head.appendChild(d.createElement("script")).src = A; cal.loaded = true; } if (ar[0] === L) { const api = function () { p(api, arguments); }; const namespace = ar[1]; api.q = api.q || []; typeof namespace === "string" ? (cal.ns[namespace] = api) && p(api, ar) : p(cal, ar); return; } p(cal, ar); }; })(window, "https://app.cal.com/embed/embed.js", "init");
-        Cal("init", { origin: "https://cal.com" });
-
-        Cal("inline", {
-            elementOrSelector: "#my-cal-inline",
-            calLink: "aswinonfinance/15min",
-            layout: "month_view"
-        });
-
-        Cal("ui", { "styles": { "branding": { "brandColor": "#000000" } }, "hideEventTypeDetails": false, "layout": "month_view" });
-    </script>
-
     <!-- Analytics (deferred — not render-blocking) -->
     <script src="/js/analytics.js" defer></script>
 </body>
